# burrow

./: .env.example  .gitignore  pyproject.toml
src/burrow/: config.py
src/burrow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/burrow/analyzer/: __init__.py  base.py  local_source.py
src/burrow/api/: __init__.py  app.py
src/burrow/cli/: __init__.py  main.py
src/burrow/core/: __init__.py  engine.py
src/burrow/graph/: __init__.py  base.py  relation.py
src/burrow/llm/: __init__.py  base.py  client.py
src/burrow/parser/: __init__.py  base.py  generic.py  log.py  models.py  stacktrace.py
src/burrow/rca/: __init__.py  engine.py  models.py
src/burrow/remediation/: __init__.py  engine.py  models.py  patcher.py
src/burrow/runtime/: __init__.py  bus.py  models.py  watcher.py
src/burrow/symbol/: analyzer.py  extractor.py  graph.py  models.py
src/burrow/utils/: __init__.py  logging.py
tests/: benchmark_rca.py  conftest.py  test_analyzer.py  test_api_stability.py  test_cli.py  test_engine.py  test_llm.py  test_packaging.py  test_parser.py  test_parser_robustness.py  test_patcher.py  test_rca.py  test_remediation.py  test_runtime.py  test_safety.py  test_symbol.py  test_watcher_robustness.py  test_workspace.py  test_workspace_robustness.py
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: backendConnector.ts  codeActions.ts  commandHandlers.ts  diagnosticsBridge.ts  extension.ts  hoverProvider.ts  patchProvider.ts  stateManager.ts  terminalWatcher.ts  treeView.ts
(+6 files in other folders)
